--- a/environments/dev/values.yaml
+++ b/environments/dev/values.yaml
@@ -1,1 +1,25 @@
 replicaCount: 1
+
+image:
+  repository: us-central1-docker.pkg.dev/terraform-project-mazlum/artemis/artemis
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "3.0.0"
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: 
+    ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
+    acme.cert-manager.io/http01-edit-in-place: "true"
+  hosts:
+    - host: artemis-dev.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: 
+   - secretName: artemis-dev-tls
+     hosts:
+       - artemis-dev.local
